Revert "Improve styles with using mixins"
This reverts commit c5fad5eb

--- a/ddp-workspace/projects/ddp-pancan/src/app/components/header/header.component.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/header/header.component.scss
@@ -183,8 +183,8 @@
 }
 
 .join-button {
-    @include btn-common;
-    @include btn-header;
+    @extend .btn-common;
+    @extend .btn-header;
     margin-left: 15px;
 }
 
