--- a/ddp-workspace/projects/ddp-pancan/src/styles.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/styles.scss
@@ -56,9 +56,9 @@ a {
 }
 
 .SimpleButton {
-    @include btn-common;
-    @include btn-outline;
-    @include btn-header;
+    @extend .btn-common;
+    @extend .btn-outline;
+    @extend .btn-header;
 }
 
 .wrapper {
