--- a/ddp-workspace/projects/ddp-pancan/src/app/components/participation/participation.component.html
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/participation/participation.component.html
@@ -2,15 +2,15 @@
     <h2 class="title" translate>App.ParticipationPage.Title</h2>
     <section *ngFor="let step of 'App.ParticipationPage.Steps' | translate; let i = index;" class="step">
         <div class="step__data">
-            <span class="step__label">{{step.Step}}</span>
-            <span class="step__time" *ngIf="step.Time">{{step.Time}}</span>
-            <h2 class="step__title" >{{step.Title}}</h2>
-            <p class="step__text">{{step.Text}}</p>
+            <span class="step__label participate-step-label">{{step.Step}}</span>
+            <span class="step__time participate-step-time" *ngIf="step.Time">{{step.Time}}</span>
+            <h2 class="step__title static-page-title">{{step.Title}}</h2>
+            <p class="step__text static-page-paragraph-text">{{step.Text}}</p>
 
             <a mat-stroked-button *ngIf="step.Button && stepsHref[i]"
                target="_blank"
                [href]="stepsHref[i]"
-               class="step__btn">
+               class="step__btn btn-common small-letter-spacing btn-outline">
                 {{step.Button}}
             </a>
         </div>
