Ddp 6256 pancan footer (#662)
* DDP-6255 pancan footer

* DDP-6256 add styles for footer for small screen

* DDP-6256 use AppRoutes in routerLink

* DDP-6256 replace icon and add padding for list

* DDP-6256 unit tests

* DDP-6256 px to rem

* DDP-6256 use AppRoutes in navigation component

Co-authored-by: Anastasiia_Glushkova <anastasiia.glushkova@clarivate.com>

--- a/ddp-workspace/projects/ddp-pancan/src/app/components/footer/footer.component.html
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/footer/footer.component.html
@@ -1,1 +1,22 @@
-<footer class="footer">footer</footer>
+<footer class="footer">
+    <div class="actions">
+        <div class="actions__wrapper">
+            <button mat-button
+                    class="back-to-top btn-common"
+                    (click)="goToTop()">
+                <mat-icon>arrow_drop_up</mat-icon>
+                {{'App.Footer.BackToTopButton' | translate}}
+            </button>
+            <app-navigation></app-navigation>
+        </div>
+        <app-auth class="auth"></app-auth>
+    </div>
+    <div class="info">
+        <span translate>App.Footer.Copyright</span>
+        <div class="contacts">
+            <span translate class="contacts__label">App.Footer.Contacts</span>
+            <span class="contacts__item">{{phone}}</span>
+            <span class="contacts__item">{{email}}</span>
+        </div>
+    </div>
+</footer>
