--- a/ddp-workspace/projects/ddp-pancan/src/app/components/welcome/welcome.component.html
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/welcome/welcome.component.html
@@ -4,7 +4,7 @@
         <p class="text" translate>App.HomePage.IntroductionSection.Text</p>
         <a mat-flat-button
            [routerLink]="'/' + AppRoutes.CountMeIn"
-           class="btn join-cmi-btn center"
+           class="btn join-cmi-btn center btn-common"
            color="primary">
             {{'App.HomePage.JoinCountMeInButton' | translate}}
         </a>
@@ -23,7 +23,7 @@
         <p class="text" [innerHTML]="'App.HomePage.LearnMoreSection.Text' | translate"></p>
         <a mat-stroked-button
            [routerLink]="'/' + AppRoutes.AboutUs"
-           class="btn learn-more-btn center small-letter-spacing">
+           class="btn learn-more-btn center small-letter-spacing btn-common btn-outline">
             {{'App.HomePage.LearnMoreSection.LearnMoreAboutUsButton' | translate}}
         </a>
     </section>
@@ -63,7 +63,7 @@
         <div class="container">
             <a mat-stroked-button
                [routerLink]="'/' + AppRoutes.AboutUs"
-               class="btn learn-more-btn center small-letter-spacing">
+               class="btn learn-more-btn center small-letter-spacing btn-common btn-outline">
                 {{'App.HomePage.ParticipateSection.LearnMoreAboutParticipationButton' | translate}}
             </a>
         </div>
@@ -76,7 +76,7 @@
         </div>
         <a mat-stroked-button
            [routerLink]="'/' + AppRoutes.FAQ"
-           class="btn more-faq-btn center small-letter-spacing">
+           class="btn more-faq-btn center small-letter-spacing btn-common btn-outline">
             {{'App.FAQ.Button.MoreFAQs' | translate}}
         </a>
     </section>
@@ -101,7 +101,7 @@
                     </a>
                 </div>
             </div>
-            <a mat-stroked-button class="btn join-btn small-letter-spacing">
+            <a mat-stroked-button class="btn join-btn small-letter-spacing btn-common btn-outline">
                 {{'App.HomePage.StayInformedSection.JoinMailingListButton' | translate}}
             </a>
         </div>
@@ -116,7 +116,7 @@
         <p class="text" translate>App.HomePage.CountMeInSection.Text</p>
         <a mat-raised-button
            [routerLink]="'/' + AppRoutes.CountMeIn"
-           class="btn join-cmi-btn"
+           class="btn join-cmi-btn btn-common"
            color="primary">
             {{'App.HomePage.JoinCountMeInButton' | translate}}
         </a>
