Fix missed styles

--- a/ddp-workspace/projects/ddp-pancan/src/app/components/welcome/welcome.component.html
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/welcome/welcome.component.html
@@ -57,7 +57,7 @@
         <div class="container">
             <a mat-stroked-button
                [routerLink]="'/' + AppRoutes.Participation"
-               class="btn learn-more-btn center small-letter-spacing">
+               class="btn learn-more-btn center small-letter-spacing btn-common btn-outline">
                 {{'App.HomePage.ParticipateSection.LearnMoreAboutParticipationButton' | translate}}
             </a>
         </div>
