--- a/ddp-workspace/projects/ddp-pancan/src/app/components/faq/faq.component.html
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/faq/faq.component.html
@@ -1,5 +1,5 @@
 <main class="faq">
-    <h2 class="title" translate>App.FAQ.Title</h2>
+    <h2 class="title static-page-title" translate>App.FAQ.Title</h2>
     <div class="container">
         <button mat-flat-button class="expand-btn" (click)="toggle()">
             <mat-icon class="icon">{{isAllOpened ? 'clear' : 'add'}}</mat-icon>
