--- a/ddp-workspace/projects/ddp-pancan/src/app/components/participation/participation.component.html
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/participation/participation.component.html
@@ -1,5 +1,5 @@
 <main class="participation">
-    <h2 class="title" translate>App.ParticipationPage.Title</h2>
+    <h2 class="title static-page-title" translate>App.ParticipationPage.Title</h2>
     <section *ngFor="let step of 'App.ParticipationPage.Steps' | translate; let i = index;" class="step">
         <div class="step__data">
             <span class="step__label participate-step-label">{{step.Step}}</span>
