--- a/ddp-workspace/projects/ddp-prion/src/styles.scss
+++ b/ddp-workspace/projects/ddp-prion/src/styles.scss
@@ -285,6 +285,10 @@ a:focus {
     background-color: mat-color($app-theme, 600);
 }
 
+.button_half {
+    width: 50%;
+}
+
 //Next button
 #nextButton {
     color: #82B547 !important;
