DDP-6401 integrate join mailing list dialog from toolkit

--- a/ddp-workspace/projects/ddp-pancan/src/app/components/footer/footer.component.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/footer/footer.component.scss
@@ -30,6 +30,7 @@ $footer-divider-color: #444444;
     height: 6.25rem;
     flex-direction: column;
     padding: 1.15rem 2rem 2.5rem 3.375rem;
+    font-size: 1rem;
 }
 
 .info,
