--- a/ddp-workspace/projects/ddp-pancan/src/app/components/faq-section/faq-section.component.html
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/faq-section/faq-section.component.html
@@ -7,8 +7,16 @@
                 <p class="faq-block__question no-margin">{{item.Question}}</p>
             </mat-expansion-panel-header>
             <ng-template matExpansionPanelContent>
-                <ng-container *ngFor="let paragraph of item.Paragraphs">
-                    <p class="faq-block__text" [innerHTML]="paragraph" routeTransformer></p>
+                <p *ngFor="let paragraph of item.Paragraphs"
+                   class="faq-block__text"
+                   [innerHTML]="paragraph"
+                   routeTransformer>
+                </p>
+                <!-- special case for sign up for our mailing list question -->
+                <ng-container *ngIf="!item.Paragraphs">
+                    <p class="faq-block__text">
+                        {{item.Text1}} <button class="join-btn button-link" (click)="openJoinMailingList()">{{item.Button}}</button> {{item.Text2}}
+                    </p>
                 </ng-container>
             </ng-template>
         </mat-expansion-panel>
