--- a/ddp-workspace/projects/ddp-pancan/src/styles/variables.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/styles/variables.scss
@@ -16,4 +16,5 @@ $footer-height: 14.94rem;
 // Colors
 $text-color: #000000;
 $primary-color: #7154FF;
+$grey-button-color: #a8a8a8;
 $section-grey-background-color: #F6F7FA;
