--- a/ddp-workspace/projects/ddp-circadia/src/app/components/pages/session-expired/session-expired.component.html
+++ b/ddp-workspace/projects/ddp-circadia/src/app/components/pages/session-expired/session-expired.component.html
@@ -7,7 +7,9 @@
     {{ 'SessionExpired.Description' | translate }}
   </p>
 
-  <button class="button button--yellow" (click)="signin()">
-    {{ 'SessionExpired.Button' | translate }}
-  </button>
+  <div class="btn-container">
+    <button class="button button--yellow" (click)="signin()">
+      {{ 'SessionExpired.Button' | translate }}
+    </button>
+  </div>
 </div>
