--- a/ddp-workspace/projects/ddp-circadia/src/app/components/pages/stay-informed/stay-informed.component.html
+++ b/ddp-workspace/projects/ddp-circadia/src/app/components/pages/stay-informed/stay-informed.component.html
@@ -6,7 +6,7 @@
   <p [innerHTML]="'StayInformed.Paragraph' | translate"></p>
 
   <div class="btn-container">
-    <a class="button button--sm button--yellow" [routerLink]="Route.Home">
+    <a class="button button--yellow" [routerLink]="Route.Home">
       {{ 'StayInformed.Button' | translate }}
     </a>
   </div>
