--- a/ddp-workspace/projects/ddp-circadia/src/app/components/header/header.component.html
+++ b/ddp-workspace/projects/ddp-circadia/src/app/components/header/header.component.html
@@ -8,62 +8,83 @@
       />
     </a>
 
-    <nav class="header__nav header__nav--left">
-      <ul class="nav-list">
-        <li class="nav-list__item">
-          <a class="nav-list__link" [routerLink]="Route.Home">
-            {{ 'Header.Links.Home' | translate }}
-          </a>
-        </li>
+    <button
+      type="button"
+      class="header__toggle-btn toggle-btn"
+      [class.toggle-btn--open]="isNavbarOpen"
+      (click)="setIsNavbarOpen(!isNavbarOpen)"
+    >
+      <span class="toggle-btn__bar"></span>
+      <span class="toggle-btn__bar"></span>
+      <span class="toggle-btn__bar"></span>
+    </button>
 
-        <li class="nav-list__item">
-          <a class="nav-list__link" [routerLink]="Route.Home" fragment="about">
-            {{ 'Header.Links.About' | translate }}
-          </a>
-        </li>
+    <div
+      class="header__nav-container"
+      [class.header__nav-container--open]="isNavbarOpen"
+      (click)="onNavContainerClick($event)"
+    >
+      <nav class="header__nav header__nav--left">
+        <ul class="nav-list">
+          <li class="nav-list__item">
+            <a class="nav-list__link" [routerLink]="Route.Home">
+              {{ 'Header.Links.Home' | translate }}
+            </a>
+          </li>
 
-        <li class="nav-list__item">
-          <a
-            class="nav-list__link"
-            [routerLink]="Route.Home"
-            fragment="participation"
-          >
-            {{ 'Header.Links.Participation' | translate }}
-          </a>
-        </li>
+          <li class="nav-list__item">
+            <a
+              class="nav-list__link"
+              [routerLink]="Route.Home"
+              fragment="about"
+            >
+              {{ 'Header.Links.About' | translate }}
+            </a>
+          </li>
 
-        <li class="nav-list__item">
-          <a class="nav-list__link" [routerLink]="Route.Home" fragment="faq">
-            {{ 'Header.Links.FAQ' | translate }}
-          </a>
-        </li>
+          <li class="nav-list__item">
+            <a
+              class="nav-list__link"
+              [routerLink]="Route.Home"
+              fragment="participation"
+            >
+              {{ 'Header.Links.Participation' | translate }}
+            </a>
+          </li>
 
-        <li class="nav-list__item">
-          <a class="nav-list__link" [routerLink]="Route.Home" fragment="team">
-            {{ 'Header.Links.Team' | translate }}
-          </a>
-        </li>
-      </ul>
-    </nav>
+          <li class="nav-list__item">
+            <a class="nav-list__link" [routerLink]="Route.Home" fragment="faq">
+              {{ 'Header.Links.FAQ' | translate }}
+            </a>
+          </li>
 
-    <nav class="header__nav header__nav--right">
-      <ul class="nav-list">
-        <li *ngIf="isAuthenticated" class="nav-list__item">
-          <a class="nav-list__link" [routerLink]="Route.Dashboard">
-            {{ 'Header.Links.Dashboard' | translate }}
-          </a>
-        </li>
+          <li class="nav-list__item">
+            <a class="nav-list__link" [routerLink]="Route.Home" fragment="team">
+              {{ 'Header.Links.Team' | translate }}
+            </a>
+          </li>
+        </ul>
+      </nav>
 
-        <li class="nav-list__item">
-          <ddp-sign-in-out class="nav-list__link"></ddp-sign-in-out>
-        </li>
+      <nav class="header__nav header__nav--right">
+        <ul class="nav-list">
+          <li *ngIf="isAuthenticated" class="nav-list__item">
+            <a class="nav-list__link" [routerLink]="Route.Dashboard">
+              {{ 'Header.Links.Dashboard' | translate }}
+            </a>
+          </li>
 
-        <li *ngIf="!isAuthenticated" class="nav-list__item">
-          <a class="button button--yellow" [routerLink]="Route.JoinUs">
-            {{ 'Header.Links.SignUp' | translate }}
-          </a>
-        </li>
-      </ul>
-    </nav>
+          <li class="nav-list__item">
+            <ddp-sign-in-out class="nav-list__link"></ddp-sign-in-out>
+          </li>
+
+          <li *ngIf="!isAuthenticated" class="nav-list__item">
+            <a class="button button--yellow" [routerLink]="Route.JoinUs">
+              {{ 'Header.Links.SignUp' | translate }}
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </div>
   </div>
 </header>
