--- a/ddp-workspace/projects/ddp-circadia/src/app/components/pages/home/home.component.scss
+++ b/ddp-workspace/projects/ddp-circadia/src/app/components/pages/home/home.component.scss
@@ -18,6 +18,10 @@
 
   color: #ffffff;
 
+  @media (max-width: 860px) {
+    padding: 11.2rem 2.4rem;
+  }
+
   &__title {
     margin-bottom: 4rem;
 
@@ -106,6 +110,10 @@ h3 {
 
   margin-bottom: 3rem;
 
+  @media (max-width: 480px) {
+    flex-flow: column nowrap;
+  }
+
   &__img-container {
     flex: 0 0 24rem;
     height: 31rem;
@@ -114,6 +122,13 @@ h3 {
 
     border: 1px solid #959595;
     background: #ffffff;
+
+    @media (max-width: 480px) {
+      flex: 1;
+
+      margin-right: 0;
+      margin-bottom: 1.2rem;
+    }
   }
 
   &__img {
