--- a/ddp-workspace/projects/ddp-circadia/src/styles/_reset.scss
+++ b/ddp-workspace/projects/ddp-circadia/src/styles/_reset.scss
@@ -15,6 +15,10 @@ html {
   font-size: 62.5%;
 
   scroll-behavior: smooth;
+
+  @media (max-width: 1024px) {
+    font-size: 56.25%;
+  }
 }
 
 body {
