--- a/ddp-workspace/projects/ddp-circadia/src/styles/_buttons.scss
+++ b/ddp-workspace/projects/ddp-circadia/src/styles/_buttons.scss
@@ -1,9 +1,32 @@
 @import 'variables';
 
+@mixin outlined($primary-color, $text-color, $filled-text-color) {
+  &-outline {
+    background: transparent;
+    border: 2px solid $primary-color;
+
+    color: $text-color;
+
+    &:not(:disabled) {
+      &:hover,
+      &:focus {
+        background: $primary-color;
+
+        color: $filled-text-color;
+      }
+
+      &:active {
+        background: darken($primary-color, 10%);
+        border-color: darken($primary-color, 10%);
+      }
+    }
+  }
+}
+
 .button {
   display: inline-block;
 
-  padding: 1.65rem 2.8rem;
+  padding: 1.45rem 2.6rem;
 
   border-radius: 12px;
   border: none;
@@ -11,11 +34,13 @@
 
   font-family: inherit;
   font-size: 1.8rem;
+  font-weight: 600;
   line-height: 1;
   white-space: nowrap;
   text-decoration: none;
 
-  transition: background 0.2s ease, box-shadow 0.2s ease, opacity 0.2s ease;
+  transition: background 0.2s ease, box-shadow 0.2s ease, opacity 0.2s ease,
+    border-color 0.2s ease, color 0.2s ease;
   cursor: pointer;
 
   &:disabled {
@@ -37,7 +62,7 @@
   }
 
   &--sm {
-    padding: 1.4rem 2.6rem;
+    padding: 1.2rem 2.4rem;
 
     border-radius: 10px;
 
@@ -46,8 +71,11 @@
 
   &--yellow {
     background: $color-yellow-1;
+    border: 2px solid $color-yellow-1;
 
     color: #000000;
+
+    @include outlined($color-yellow-1, darken($color-yellow-1, 20%), #000000);
 
     &:not(:disabled) {
       &:hover,
@@ -63,6 +91,7 @@
 
   &--blue {
     background: $color-blue-2;
+    border: 2px solid $color-blue-2;
 
     color: #ffffff;
 
@@ -80,6 +109,7 @@
 
   &--opaque {
     background: #efefef;
+    border: 2px solid #efefef;
 
     color: #000000;
 
