--- a/ddp-workspace/projects/ddp-pancan/src/styles/variables.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/styles/variables.scss
@@ -18,3 +18,4 @@ $text-color: #000000;
 $primary-color: #7154FF;
 $grey-button-color: #a8a8a8;
 $section-grey-background-color: #F6F7FA;
+$warn-color: #f44336;
