--- a/ddp-workspace/projects/ddp-pancan/src/styles.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/styles.scss
@@ -23,13 +23,13 @@ body {
 }
 
 @media only screen and (max-width: $desktop-breakpoint) {
-    html, body {
+    html {
         font-size: 14px;
     }
 }
 
 @media only screen and (max-width: $tablet-breakpoint) {
-    html, body {
+    html {
         font-size: 12px;
     }
 }
@@ -74,10 +74,120 @@ a {
     box-sizing: border-box;
 }
 
-.italic {
+.Italic {
     font-style: italic;
 }
 
 .Link {
     color: $primary-color;
+}
+
+.button-link {
+    border: none;
+    background: none;
+    font-size: inherit;
+    font-family: inherit;
+    color: $primary-color;
+
+    &:hover, &:focus {
+        text-decoration: underline;
+    }
+}
+
+.Modal-title {
+    @extend .static-page-title;
+
+    margin: 10px 0 12px 0;
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+
+    .mat-icon-button {
+        top: -20px;
+        right: -15px;
+    }
+}
+
+.Modal-text {
+    font-size: 1.2rem;
+    line-height: 1.8rem;
+    margin-bottom: 15px;
+    margin-top: 0;
+}
+
+.Modal-progress {
+    margin: 5px 0;
+}
+
+.JoinDialogFiled {
+    width: 100%;
+}
+
+.JoinDialogNameField {
+    width: 50%;
+    margin: 0 30px 0 0;
+}
+
+.JoinDialogLastnameField {
+    width: 50%;
+}
+
+.JoinDialogGroupFields {
+    display: flex;
+}
+
+.JoinField--margin {
+    margin-bottom: 5px;
+}
+
+@media only screen and (max-width: $tablet-breakpoint) {
+    .JoinDialogGroupFields {
+        flex-direction: column;
+    }
+
+    .JoinDialogNameField {
+        width: 100%;
+        margin: 0;
+    }
+
+    .JoinDialogLastnameField {
+        width: 100%;
+    }
+}
+
+.ButtonFilled {
+    @extend .btn-common;
+
+    outline: none;
+    padding: 0.7rem 1.5rem;
+    border: none;
+    color: #fff !important;
+    transition: all .3s ease-out;
+    box-shadow: 0 2px 5px 0 rgba(0,0,0,.16),0 2px 10px 0 rgba(0,0,0,.12);
+    background-color: $primary-color;
+
+    &:hover, &:focus {
+        box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
+    }
+}
+
+.ButtonFilled--neutral {
+    background-color: $grey-button-color !important;
+}
+
+.ButtonFilled--neutral--margin {
+    margin-right: 20px;
+}
+
+.NoMargin {
+    margin: 0!important;
+}
+
+.ErrorMessage {
+    border-top: 2px solid $warn-color;
+    margin-top: 30px;
+    font-size: 0.9rem;
+    color: $warn-color;
+    font-weight: 300;
+    padding: 15px 0;
 }
