Apply styles for sticky nav

--- a/ddp-workspace/projects/ddp-pancan/src/app/components/anchors-page/anchors-page.component.html
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/anchors-page/anchors-page.component.html
@@ -1,5 +1,5 @@
 <main class="page">
-    <h2 class="title1 static-page-title">{{source + '.Title' | translate}}</h2>
+    <h2 class="title static-page-title">{{source + '.Title' | translate}}</h2>
 
     <nav class="anchors">
         <ul>
