DDP-6487 refactor handling of visibility updates

--- a/ddp-workspace/projects/ddp-rgp/src/app/components/activity/activity.component.html
+++ b/ddp-workspace/projects/ddp-rgp/src/app/components/activity/activity.component.html
@@ -53,6 +53,7 @@
           [validationRequested]="validationRequested"
           [studyGuid]="studyGuid"
           [activityGuid]="activityGuid"
+          (visibilityChanged)="updateVisibility($event)"
           (embeddedComponentsValidationStatus)="
             updateEmbeddedComponentValidationStatus(0, $event)
           "
@@ -97,6 +98,7 @@
         [validationRequested]="validationRequested"
         [studyGuid]="studyGuid"
         [activityGuid]="activityGuid"
+        (visibilityChanged)="updateVisibility($event)"
         (embeddedComponentsValidationStatus)="
           updateEmbeddedComponentValidationStatus(1, $event)
         "
@@ -192,6 +194,7 @@
             [validationRequested]="validationRequested"
             [studyGuid]="studyGuid"
             [activityGuid]="activityGuid"
+            (visibilityChanged)="updateVisibility($event)"
             (embeddedComponentsValidationStatus)="
               updateEmbeddedComponentValidationStatus(2, $event)
             "
