--- a/ddp-workspace/projects/ddp-rarex/src/app/components/activity/activity.component.html
+++ b/ddp-workspace/projects/ddp-rarex/src/app/components/activity/activity.component.html
@@ -27,6 +27,7 @@
             [validationRequested]="validationRequested"
             [studyGuid]="studyGuid"
             [activityGuid]="activityGuid"
+            (visibilityChanged)="updateVisibility($event)"
             (embeddedComponentsValidationStatus)="
               updateEmbeddedComponentValidationStatus(0, $event)
             "
@@ -71,6 +72,7 @@
             [validationRequested]="validationRequested"
             [studyGuid]="studyGuid"
             [activityGuid]="activityGuid"
+            (visibilityChanged)="updateVisibility($event)"
             (embeddedComponentsValidationStatus)="
               updateEmbeddedComponentValidationStatus(1, $event)
             "
@@ -89,6 +91,7 @@
               [validationRequested]="validationRequested"
               [studyGuid]="studyGuid"
               [activityGuid]="activityGuid"
+              (visibilityChanged)="updateVisibility($event)"
               (embeddedComponentsValidationStatus)="
                 updateEmbeddedComponentValidationStatus(2, $event)
               "
