--- a/ddp-workspace/projects/ddp-sdk/src/lib/components/activityForm/activity-redesigned.component.html
+++ b/ddp-workspace/projects/ddp-sdk/src/lib/components/activityForm/activity-redesigned.component.html
@@ -45,6 +45,7 @@
                     [validationRequested]="validationRequested"
                     [studyGuid]="studyGuid"
                     [activityGuid]="activityGuid"
+                    (visibilityChanged)="updateVisibility($event)"
                     (embeddedComponentsValidationStatus)="updateEmbeddedComponentValidationStatus(0, $event)"
                     (componentBusy)="embeddedComponentBusy$[0].next($event)">
                 </ddp-activity-section>
@@ -62,6 +63,7 @@
                     [validationRequested]="validationRequested"
                     [studyGuid]="studyGuid"
                     [activityGuid]="activityGuid"
+                    (visibilityChanged)="updateVisibility($event)"
                     (embeddedComponentsValidationStatus)="updateEmbeddedComponentValidationStatus(1, $event)"
                     (componentBusy)="embeddedComponentBusy$[1].next($event)">
                 </ddp-activity-section>
@@ -74,6 +76,7 @@
                         [validationRequested]="validationRequested"
                         [studyGuid]="studyGuid"
                         [activityGuid]="activityGuid"
+                        (visibilityChanged)="updateVisibility($event)"
                         (embeddedComponentsValidationStatus)="updateEmbeddedComponentValidationStatus(2, $event)"
                         (componentBusy)="embeddedComponentBusy$[2].next($event)">
                     </ddp-activity-section>
